Attempt to resolve InaccessableObjectException